# MediAssist-AI

./: .gitignore  Fetch_data.ipynb  README.md  app.py  conversations.json  del.py  llm.py  main.py  medassist_simple.py  model_list.py  pubmed.py  pubmed_data.py  pyproject.toml  rag.py  reg.py  requirements.txt  run_backend.py  setup.py  streamlit_app.py
.ipynb_checkpoints/: Fetch_data-checkpoint.ipynb
Fetch_data/: fetch_data.py
backend/: auth.py  database.py  main.py  models.py
backend/routes/: auth_routes.py  chat_routes.py
backend/utils/: embeddings.py  logger.py
chroma_db/: chroma.sqlite3
chroma_pubmed/: chroma.sqlite3
frontend/: streamlit_app.py
frontend/components/: chat.py
pumed/: chroma.sqlite3
rag_pipeline/: __init__.py  agents.py  document_processor.py  enhanced_rag.py  hallucination_checker.py  memory.py  query_transformer.py  reranker.py
