[project]
name = "mediassist-own"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.6",
    "google>=3.0.0",
    "google-genai>=1.55.0",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.11",
    "streamlit>=1.52.1",
]
